# ChangeLog for dev-ruby/net-ssh
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/net-ssh/ChangeLog,v 1.67 2010/02/28 08:08:49 graaff Exp $

  28 Feb 2010; Hans de Graaff <graaff@gentoo.org> -net-ssh-1.1.3.ebuild:
  Remove masked version.

  14 Feb 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  net-ssh-2.0.20.ebuild:
  Add Ruby 1.9 support.

*net-ssh-2.0.20 (11 Feb 2010)

  11 Feb 2010; Hans de Graaff <graaff@gentoo.org> +net-ssh-2.0.20.ebuild:
  Version bump: Support 'ProxyCommand none' directive

  18 Jan 2010; Hans de Graaff <graaff@gentoo.org> -net-ssh-2.0.16.ebuild,
  -net-ssh-2.0.16-r1.ebuild, -net-ssh-2.0.17.ebuild:
  Remove old versions.

*net-ssh-2.0.19 (18 Jan 2010)

  18 Jan 2010; Hans de Graaff <graaff@gentoo.org> +net-ssh-2.0.19.ebuild:
  Version bump with minor bug fixes.

*net-ssh-2.0.17-r1 (14 Jan 2010)

  14 Jan 2010; Hans de Graaff <graaff@gentoo.org> +net-ssh-2.0.17-r1.ebuild,
  +files/net-ssh-2.0.17-readpartial.patch:
  Apply upstream patch to fix tests in dependant packages.

*net-ssh-2.0.17 (09 Jan 2010)

  09 Jan 2010; Hans de Graaff <graaff@gentoo.org> +net-ssh-2.0.17.ebuild:
  Version bump with minor fix for Windows.

*net-ssh-2.0.16-r1 (06 Jan 2010)

  06 Jan 2010; Hans de Graaff <graaff@gentoo.org> +net-ssh-2.0.16-r1.ebuild:
  Convert to ruby-fakegem. Both docs and tests depend on packages that are
  not available right now, so leave them out for now.

  04 Jan 2010; Christian Faulhammer <fauli@gentoo.org> net-ssh-1.1.3.ebuild,
  net-ssh-2.0.16.ebuild:
  Transfer Prefix keywords

*net-ssh-2.0.16 (30 Nov 2009)

  30 Nov 2009; Hans de Graaff <graaff@gentoo.org> +net-ssh-2.0.16.ebuild:
  Version bump with bug fixes.

  30 Nov 2009; Hans de Graaff <graaff@gentoo.org> -net-ssh-2.0.11.ebuild,
  -net-ssh-2.0.13.ebuild, -net-ssh-2.0.14.ebuild:
  Remove old versions.

  31 Oct 2009; Brent Baude <ranger@gentoo.org> net-ssh-2.0.15.ebuild:
  Marking net-ssh-2.0.15 ppc64 for bug 288262
