@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/net-ssh
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/net-ssh/ChangeLog,v 1.67 2010/02/28 08:08:49 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/net-ssh/ChangeLog,v 1.68 2010/03/21 07:14:11 graaff Exp $
+
+*net-ssh-2.0.21 (21 Mar 2010)
+
+  21 Mar 2010; Hans de Graaff <graaff@gentoo.org> +net-ssh-2.0.21.ebuild:
+  Version bump with bug fixes. Documentation can now be generated.
 
   28 Feb 2010; Hans de Graaff <graaff@gentoo.org> -net-ssh-1.1.3.ebuild:
   Remove masked version.
